--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,7 +3,10 @@ name = "handwriter"
 version = "0.1.0"
 authors = ["Deep Gaurav <deepgauravraj@gmail.com>"]
 edition = "2018"
+build = "build.rs"
 
+[lib]
+name = "handwriter"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
