--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,3 +15,4 @@ ndarray = "0.14.0"
 anyhow = "1.0"
 pyo3 = { version = "0.13.2", default-features = false }
 log = "0.4"
+serde = {version = "1", features = ["derive"]}
