--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,15 +4,26 @@ version = "0.1.0"
 authors = ["Deep Gaurav <deepgauravraj@gmail.com>"]
 edition = "2018"
 
+[features]
+default = ["pygen"]
+pygen= [
+    "numpy",
+    "svg",
+    "ndarray",
+    "anyhow",
+    "pyo3"
+]
+
 [lib]
 name = "handwriter"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-numpy = "0.13"
-svg = "0.9.1"
-ndarray = "0.14.0"
-anyhow = "1.0"
-pyo3 = { version = "0.13.2", default-features = false }
 log = "0.4"
+cfg-if = "0.1"
 serde = {version = "1", features = ["derive"]}
+numpy = {version ="0.13", optional=true}
+svg = {version ="0.9.1",optional=true}
+ndarray = {version="0.14.0",optional=true}
+anyhow = {version="1.0",optional=true}
+pyo3 = { version = "0.13.2", default-features = false,optional=true }
