--- a/Cargo.toml
+++ b/Cargo.toml
@@ -26,4 +26,4 @@ numpy = {version ="0.13", optional=true}
 svg = {version ="0.9.1",optional=true}
 ndarray = {version="0.14.0",optional=true}
 anyhow = {version="1.0",optional=true}
-pyo3 = { version = "0.13.2", default-features = false,optional=true }
+pyo3 = { version = "0.13.2",optional=true }
